app/platform-app/deployment.yaml
#####
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-app
  namespace: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platform-app
  template:
    metadata:
      labels:
        app: platform-app

    # ✅ THIS IS THE MISSING PIECE
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000

      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: app
          image: ghcr.io/dhia-03/platform-project:c00766ba16e5d8f33a6ac4022669748c1a4d8fcf
          imagePullPolicy: Always

          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
