app/platform-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-app-service
  namespace: platform

spec:
  selector:
    app: platform-app

  ports:
    - port: 5000
      targetPort: 5000

  type: ClusterIP
