app/platform-app/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-platform-app
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: platform-project

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector: {}

  egress:
    - to:
        - podSelector: {}
