app/platform-app/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: platform-app-netpol
  namespace: platform
spec:
  podSelector:
    matchLabels:
      app: platform-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
